# repo_auto_tool

./: .gitignore  IMPROVEMENT_PLAN.md  INTELLIGENT_FEATURES.md  PHASE1_COMPLETE.md  README.md  RESEARCH_EXAMPLES.md  RESEARCH_MODE_COMPLETE.md  RESEARCH_MODE_GUIDE.md  SETUP.md  TODO.md  bootstrap.sh  improvement-prompt.txt  pyproject.toml
.claude/: settings.local.json
src/repo_auto_tool/: __init__.py  agents.py  budget_tracker.py  circuit_breaker.py  claude_interface.py  cli.py  config.py  context_enricher.py  context_manager.py  convergence.py  data_visualizer.py  exceptions.py  foreign_repo.py  git_helper.py  goal_analyzer.py  improver.py  interrupt_handler.py  logging.py  model_selector.py  performance_metrics.py  pr_generator.py  prompt_adapter.py  prompt_learner.py  prompt_parser.py  research_mode.py  safety.py  session_history.py  session_manager.py  session_metrics.py  session_report.py  smart_defaults.py  smart_validator.py  state.py  tui.py  validators.py  watch_mode.py
src/repo_improver/: __init__.py  claude_interface.py  cli.py  config.py  git_helper.py  improver.py  state.py  validators.py
tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_convergence.py  test_exceptions.py  test_integration.py  test_prompt_learner.py  test_safety.py  test_session_report.py
