[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-improver"
version = "0.1.0"
description = "Continuously improve a codebase toward a goal using Claude Code CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nick" }
]
keywords = ["claude", "ai", "code-improvement", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
repo-improver = "repo_improver.cli:main"

[project.urls]
Homepage = "https://github.com/nick/repo-improver"
Repository = "https://github.com/nick/repo-improver"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_improver"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
